test/lattests/extensions/objects1/bad/fieldOfNonexistentType.lat
class a {
    b x;
}

int main() { return 0; }